fixed button spacing

--- a/public/assets/css/adminstyle.css
+++ b/public/assets/css/adminstyle.css
@@ -56,6 +56,6 @@ label {
     transform: scale(1.03);
 }
 
-.svg {
+svg {
     margin-right:var(--spacing)
 }
